tracks fetching once